Added contact form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,21 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+$font: 'Arial', 'Times', serif;
+$color: #FFFFFF;
+
+body {
+  font-family: $font;
+  background-color: $color;
+  margin: 50px;
+  padding: 10px;
+}
+
+h1 {
+  text-transform: uppercase;
+}
+
+h2 {
+
+}
