--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,20 +17,26 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-$font: 'Arial', 'Times', serif;
-$color: #FFFFFF;
+$font-body: 'Arial', 'Times', serif;
+$color-bg: #FFFFFF;
+
 
 body {
-  font-family: $font;
-  background-color: $color;
-  margin: 50px;
-  padding: 10px;
+  font-family: $font-body;
+  background-color: $color-bg;
+  //padding: 10px;
 }
 
 h1 {
   text-transform: uppercase;
+  margin: 10px;
+  padding: 10px;
 }
 
 h2 {
+
+}
+
+header {
 
 }
