--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,16 +1,17 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import "bootstrap-sprockets";
+@import "bootstrap";
 
 $nav-color: #2ACCFF;
-
 
 form label, form input {
 display: block;
 margin: 10px;
 }
 
-.navbar {
+/*.navbar {
   padding:0;
   background-color: $nav-color;
   width: 100%;
@@ -40,3 +41,4 @@ margin: 10px;
 .auth {
   float: right;
 }
+*/
