--- a/app/views/albums/index.html.haml
+++ b/app/views/albums/index.html.haml
@@ -17,7 +17,7 @@
     - @albums.each do |album|
       %tr
         %td= album.title
-        %td= album.artist
+        %td= album.artist.name
         %td= album.composer
         %td= album.genre
         %td= album.year
