--- a/app/views/albums/_form.html.haml
+++ b/app/views/albums/_form.html.haml
@@ -11,7 +11,7 @@
     = f.text_field :title
   .field
     = f.label :artist
-    = f.text_field :artist
+    = f.hidden_field :artist_id, value: @album.artist.id
   .field
     = f.label :composer
     = f.text_field :composer
