--- a/app/views/artists/show.html.haml
+++ b/app/views/artists/show.html.haml
@@ -6,6 +6,16 @@
 
 %p= link_to t('.add_album'), new_album_path(artist_id: @artist)
 
+%p Albums:
+%table
+  %tbody
+  - @artist.albums.each do |album|
+    %tr
+      %td= album.title
+      %td= link_to 'Show', album
+      %td= link_to 'Edit', edit_album_path(album)
+      %td= link_to 'Destroy', album, :method => :delete, :data => { :confirm => 'Are you sure?' }
+
 = link_to t('.edit'), edit_artist_path(@artist)
 \|
 = link_to t('.back'), artists_path
