--- a/app/views/contact_mailer/contact_email.en.html.haml
+++ b/app/views/contact_mailer/contact_email.en.html.haml
@@ -1,7 +1,8 @@
 %p= "Dear #{t('app_title')},"
 %p= "Could you get in touch with me please?"
 
-%dl
+%dl.myform
+
   %dt Name:
   %dd= @name
   %dt Email:
