--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,10 +10,10 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *
  *= require_tree .
  *= require_self
  */
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
@@ -24,13 +24,15 @@ $color-bg: #FFFFFF;
 body {
   font-family: $font-body;
   background-color: $color-bg;
-  //padding: 10px;
+  //text-align: center;
+  padding: 10px;
 }
 
 h1 {
   text-transform: uppercase;
   margin: 10px;
   padding: 10px;
+  text-align: center;
 }
 
 h2 {
