--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -5,12 +5,14 @@ body {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
+  text-align: center;
 }
 
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
+  padding: 10px;
 }
 
 pre {
@@ -21,6 +23,7 @@ pre {
 
 a {
   color: #000;
+  padding: 5px;
 
   &:visited {
     color: #666;
