--- a/app/views/albums/index.html.haml
+++ b/app/views/albums/index.html.haml
@@ -1,4 +1,4 @@
-%h1 Listing albums
+%h1 Your albums
 
 %table
   %thead
@@ -27,5 +27,3 @@
         %td= link_to 'Destroy', album, method: :delete, data: { confirm: 'Are you sure?' }
 
 %br
-
-= link_to 'New Album', new_album_path
