--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -20,6 +20,12 @@ display:inline-block;
   text-align: center;
 }
 
+footer {
+  position:absolute;
+   bottom:0;
+   width:100%;
+   height:60px;
+}
 
 /*.navbar {
   padding:0;
