--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,9 +14,9 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = javascript_include_tag 'modernizr'
     = csrf_meta_tags
-  
-    = render 'shared/header'
+
+
   %body
-    - flash.each do |key, value|
-      = content_tag :div, content_tag(:p, value), id: "#{key}" unless value.blank?
+    = render 'shared/header'
     = yield
+    = render 'shared/footer'
